@@ -1,3 +1,6 @@
+Version 2009110401
++ Modernized Makefile.PL
+
 Version 2009081101
 + Created Changes.
 + Added README to MANIFEST.
